css/styles.css
/*
COLOR PALETTE

#f7fff7 - almost white
#343434 - dark gray - almost black
#2f3061 - blue dark
#ffe66d - yellow
#a1c6d7 - light blue
*/

/* Global Styles
---------------------------------*/
body{
color: #343434;
margin: 0;
padding: 0;
}
img{
    width: 300px;
}
a{
    color: #ffe66d;
}
a:hover{
    text-decoration: none;
}
h2{
    margin: 0;
}
.content-wrapper{
    width: 800px;
    margin: 0 auto;
    padding: 60px 0;
}

/* Profile
--------------------------------*/
header{
    background-color: #2f3061;
    color: #f7fff7;
}

/* Projects
--------------------------------*/
.projects{
    background: #f7fff7;
}
.projects a{

}
.projects .btn{
    color: #f7fff7;
    background: #2f3061;
    text-decoration: none;
    padding: 8px;
    border-radius: 4px;
}
.projects .btn:hover{
    background: rgba(47, 48, 97, 80%);
}

/* Work Experience
--------------------------------*/
.work-experience{
    background: #a1c6d7;
}

/* Education
--------------------------------*/


/* Contact Info
--------------------------------*/
footer{
    background: #343434;
    color: #f7fff7;
}

